# CLI-tool-S3-Bucket

./: .gitignore  README.md  pyproject.toml  requirements.txt
poetry_week3/: client.py  logger.py  main.py  my_args.py
poetry_week3/bucket/: crud.py  policy.py
poetry_week3/host_static/: host_web.py
poetry_week3/instance/: crud.py
poetry_week3/object/: crud.py  policy.py
poetry_week3/vpc/: crud.py
